<resources>
    <string name="app_name">Submission3</string>
    <string name="username">Username</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="detail">DETAIL</string>
    <string name="name">Name</string>
    <string name="repository">Repository</string>
    <string name="search">Search</string>
    <string name="search_hint">Search User…</string>
    <string name="github_user_apps">Github User Apps</string>
    <string name="by_rico_eka_rizkya">by Rico Eka Rizkya</string>
    <string name="location">Location</string>
    <string name="company1">Company1</string>
    <string name="company">Company</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="reminder">Reminder at 9.00 AM</string>
    <string name="message">Temukan Teman Anda di Github!</string>
</resources>